# gentooInstall

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  buildAndRun.sh  gentooInstall.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: c-cpp.yml
include/: GentooInstaller.h  GentooInstaller.hpp  InstallerFirst.h  InstallerFirst.hpp  InstallerSecond.h  InstallerSecond.hpp  Option.h  Option.hpp  requests.h  requests.hpp  utils.h  utils.hpp
scripts/: subZone.sh  zone.sh
shell/: gentooInstall2.sh
src/: InstallerFirst.cpp  InstallerSecond.cpp  chroot.cpp  format.cpp  main.cpp  main_part1.cpp  main_part2.cpp  mount.cpp  networkConfig.cpp  startMenu.cpp  tarball.cpp
src/firstPart/: InstallerFirst.cpp  chroot.cpp  disk.cpp  format.cpp  main.cpp  mount.cpp  networkConfig.cpp  startMenu.cpp  tarball.cpp
src/secondPart/: InstallerSecond.cpp  bootloader.cpp  kernel.cpp  locale.cpp  main.cpp  makeMain.cpp  networkConfig.cpp  profile.cpp  rootPasswd.cpp  user.cpp  utils.cpp  zone.cpp
utils/: Option.cpp  requests.cpp  utils.cpp
